--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <div class="page-content">
+    <div class="container">
         <h2>
             {% block content_title %}
 
