--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,13 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    VF_BLOG
+{% endblock%}
+
+{% block content_title %}
+    VF_BLOG
+{% endblock%}
+
+{% block content %}
+    <p>Добро пожаловать в VF_BLOG</p>
+{% endblock%}
